Anpassung der Tests nach Umstellung der Slot-Verfügbarkeiten